@@ -425,4 +425,20 @@ SELECT * FROM runTest('multi-merge-closest-not-containing-projected',
   ], 'POINT(12.472410859513998 70.77020397757477)', 0
 ) WHERE true ;
 
+
+SELECT * FROM runTest('#5792.0',
+  ARRAY[
+    'LINESTRING(11.812075769533624 59.77938755222866,11.811862389533625 59.77938237222866)',
+    'LINESTRING(11.811862389533625 59.77938237222866,11.811969079533624 59.77938496222866,11.812075769533624 59.77938755222866)'
+  ], 'POINT(11.812029186127067 59.7793864213727)', 0
+) WHERE true ;
+
+SELECT * FROM runTest('#5792.1',
+  ARRAY[
+    'LINESTRING(11.812075769533624 59.77938755222866,11.811862389533625 59.77938237222866)',
+    'LINESTRING(11.811862389533625 59.77938237222866,11.811969079533624 59.77938496222866,11.812075769533624 59.77938755222866)',
+    'LINESTRING(11.811862389533625 59.77938237222866,11.811969079533624 59.77938,11.812075769533624 59.77938755222866)'
+  ], 'POINT(11.812029186127067 59.7793864213727)', 0
+) WHERE true ;
+
 DROP FUNCTION runTest(text, geometry[], geometry, float8, bool);
