@@ -6,6 +6,8 @@ PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.
 
 * Bug fixes *
 
+- #5792, Prevent topology corruption with TopoGeo_addPoint near almost
+         collinear edges (Sandro Santilli)
 - #5795, Fix ST_NewEdgesSplit can cause invalid topology
          (Björn Harrtell)
 - #5794, Fix crash in TopoGeo_addPoint (Sandro Santilli)
@@ -17,7 +19,7 @@ PostgreSQL 12-17 required. GEOS 3.8+ required. Proj 6.1+ required.
          to allow pg_upgrade (Regina Obe)
 - #5800, PROJ compiled version reading the wrong minor and micro
          (Regina Obe)
-- #5790, Non-schema qualified calls causing issue with 
+- #5790, Non-schema qualified calls causing issue with
          materialized views (Regina Obe)
 
 * Enhancements *
